Fix nav button on mobile

--- a/src/css/areas/nav.less
+++ b/src/css/areas/nav.less
@@ -10,6 +10,10 @@
     .transform(all);
     transition-property: top, left, width, height;
 
+    @media @phone {
+        transform: none;
+    }
+
     &.menu--open {
         left: 0;
 
